Adds a text search feature Allows a user to search for a certain name accross officers, units, and agencies.
This is meant to be a first step towards a more robust search feature.
